--- a/practice.html
+++ b/practice.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Chess game</title>
-    <style href="style.css"></style>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-    <div id="game"></div>
+    <div id="game">
         <div class="cellprefix">8</div>
         <div class="gamecell" id="1_8"></div>
         <div class="gamecell gray" id="2_8"></div>
@@ -100,7 +100,8 @@
         <div class="cellprefix">h</div>
 
         <div id="turn">It's Whites Turn!</div>
-
-        <script scr=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    </div>
+        <script scr='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+        <script src="script.js"></script>
     </body>
     </html>
